2007-10-10  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_write_connection): add optional filter function so callers
			can choose not to write some keys

	* src/vpn-properties/nm-vpn-properties.c
		- (write_vpn_connection_to_gconf): update for changes to
			nm_gconf_write_connection()

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_changed,
		   applet_dbus_connection_settings_new,
		   applet_dbus_connection_settings_new_from_connection): fill in VPN
			setting default username
		- (applet_dbus_connection_settings_save, vpn_user_name_filter_cb): don't
			write the VPN setting's 'user_name' key to GConf since it's supposed
			to be transient

2007-10-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_add_networks_helper): don't calculate AP hashes in hot paths
		- (foo_device_added_cb, access_point_added_cb,
		   notify_ap_prop_changed_cb): calculate the AP hashes when NM notifies
			us of the AP, which isn't in a path that impacts UI speed

2007-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf): don't warn on failed reads from
			GConf (ie, where key doesn't exist)

2007-10-09  Tambet Ingo  <tambet@gmail.com>

	Now with 100% less compiler warnings!

	* src/gconf-helpers/gconf-helpers.c (read_one_setting_value_from_gconf): Remove
	a compiler warning for trying to store int value to uint variable. Add a runtime
	warning if a negative value is casted to unsigned integer.

	* src/password-dialog.c (nma_wpa_passphrase_to_hex): Cast the bssid data to char.

	* src/nm-utils.[ch]: Remove, it's part of libnm-utils.

	* src/vpn-connection-info.c: Use gconf_entry_unref() instead of deprecated
	gconf_entry_free().

	* src/menu-items.c (nm_network_menu_item_class_dispose): Remove an unused variable.

	* src/applet-dbus-settings.c: Include "vpn-password-dialog.h".