@@ -1,3 +1,10 @@
+2007-10-12  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet.c: Don't hard code the property names of the libnm-glib classes,
+	use the defined strings.
+	(notify_ap_prop_changed_cb): Fix a typo to include the AP flags property to hash
+	calculation.
+
 2007-10-10  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.h
